--- a/frontend/src/css/Annoucement.css
+++ b/frontend/src/css/Annoucement.css
@@ -3,46 +3,41 @@
 * {
   font-family: "Nunito", sans-serif;
 }
-.announce{
+.announce {
   max-width: 100vw;
-  background: #48B0DF;
+  background: #48b0df;
 }
 
-.anccont{
+.anccont {
   margin-left: auto;
   margin-right: 0;
   width: 100vw;
 }
 
 .announce .bodyy {
-    margin: auto;
-    width: 100vw;
-    height: 100vh;
- 
-    padding: 1px;
+  margin: auto;
+  width: 100vw;
+  height: 100vh;
 
+  padding: 1px;
 }
 
 .anc .bord {
   width: 100%;
-
 }
 .anc {
-
   border-radius: 1px;
   margin: auto;
   width: 100vw;
-  background: #48B0DF;
+  background: #48b0df;
   min-height: 38vw;
   height: max-content;
   margin-top: 0rem;
   padding: 1px;
   margin-top: 0rem;
-  
 }
 
 .anc .ancinfo .ancflex {
-  
 }
 
 .anc .ancinfo {
@@ -57,50 +52,42 @@
   justify-content: space-between;
   margin-left: auto;
   margin-right: 2rem;
-
 }
-.andlistparent{
+.andlistparent {
   width: 80vw;
   margin-left: auto;
   margin-right: 2vw;
   background: rgb(241, 249, 255);
   border-radius: 0.9rem;
   padding-bottom: 2rem;
-  
-
 }
-.anc .ancinfo h1{
-    margin: 0;
-    float: left;  
-    font-size: 1.7rem;
-    color: black;
-    margin-left: 2rem;
-    margin-top: 1rem;
-
+.anc .ancinfo h1 {
+  margin: 0;
+  float: left;
+  font-size: 1.7rem;
+  color: black;
+  margin-left: 2rem;
+  margin-top: 1rem;
 }
-.anc .ancinfoback{
-  background: #48B0DF;
+.anc .ancinfoback {
+  background: #48b0df;
   margin: 0;
   padding: 0.1px;
   height: 14rem;
   width: 100vw;
-
- 
 }
 .anc .ancinfo img {
   height: 9rem;
   border-radius: 1rem;
   margin-right: 2rem;
   margin-top: 0.5rem;
-
 }
 
-.anc .formancc{
-  background: #48B0DF;
+.anc .formancc {
+  background: #48b0df;
   width: 100vw;
   padding: 0.1px;
   height: 36rem;
-  
 }
 
 .anc .ancinfo p {
@@ -113,57 +100,54 @@
 }
 
 .announce .anc li {
-height: 2rem;
-list-style: none;
-margin-top: 0rem;
-height: min-content;
-width: 96%;
-align-items: center;
+  height: 2rem;
+  list-style: none;
+  margin-top: 0rem;
+  height: min-content;
+  width: 96%;
+  align-items: center;
 
-background: white;
-
+  background: white;
 }
 
-.announce .anc #anclistitems li:first-child{
-  background: #3657A7;
+.announce .anc #anclistitems li:first-child {
+  background: #3657a7;
 }
-.announce .anc li:first-child{
-  background: #3657A7;
+.announce .anc li:first-child {
+  background: #3657a7;
   color: white;
   width: 90%;
 }
 
-.anc .anclistitems{
+.anc .anclistitems {
   background: white;
   width: 92%;
   border-bottom-left-radius: 0.5rem;
   border-bottom-right-radius: 0.5rem;
 }
 
-.anc .anclistitemsbr{
-   height: 0.15rem;
-   width: 97%;
-    border: none;
-   background: rgb(230, 230, 230);
-   margin: auto;
+.anc .anclistitemsbr {
+  height: 0.15rem;
+  width: 97%;
+  border: none;
+  background: rgb(230, 230, 230);
+  margin: auto;
 }
 
-.anclistss{
+.anclistss {
   width: 80vw;
   margin: auto;
   margin-top: 1rem;
   margin-left: auto;
   margin-right: 2rem;
 }
-.anclistss h1{
+.anclistss h1 {
   font-size: 1.7rem;
-  color: #00008B;
+  color: #00008b;
   float: left;
   margin-left: 3rem;
-
-
 }
-.anc .bord h3{
+.anc .bord h3 {
   font-weight: 500;
   font-size: 1rem;
   word-break: break-all;
@@ -171,22 +155,21 @@ background: white;
   line-height: 2rem;
   width: 20vw;
 }
-.anc .bord:first-child h3{
+.anc .bord:first-child h3 {
   font-weight: 700;
   font-size: 1.1rem;
 }
-.anc .bord:first-child{
+.anc .bord:first-child {
   border-top-left-radius: 0.5rem;
   border-top-right-radius: 0.5rem;
 }
-.anc .anclistitems li:first-child{
+.anc .anclistitems li:first-child {
   color: black;
   background: white;
   text-align: center;
   width: 98%;
-  
 }
-.anc .anclistitems li:first-child h3{
+.anc .anclistitems li:first-child h3 {
   font-weight: 400;
   font-size: 1rem;
 }
@@ -200,7 +183,6 @@ background: white;
   text-align: center;
   margin-right: 0rem;
   width: 20vw;
-
 }
 
 .anc li .p3 {
@@ -210,12 +192,9 @@ background: white;
   word-break: break-all;
   white-space: normal;
   line-height: 2rem;
-  font-size:1rem;
-
+  font-size: 1rem;
 }
-.anc li .p6{
-  
-  
+.anc li .p6 {
 }
 
 /* .donate {
@@ -230,7 +209,6 @@ background: white;
 } */
 
 .AForm {
- 
   background-color: hsl(0, 0%, 99%);
   padding: 30px;
   width: 30vw;
@@ -241,30 +219,30 @@ background: white;
   margin-bottom: 2rem;
   border-radius: 0.5rem;
 }
-.Formcont{
+.Formcont {
   width: 82vw;
   margin-left: auto;
   margin-right: 2vw;
 }
 
-.Formcont .button-53{
-    border-radius: 0.5rem;
-    background: #48B0DF;
-    color: white;
+.Formcont .button-53 {
+  border-radius: 0.5rem;
+  background: #48b0df;
+  color: white;
 }
-.AForm #title{
-    width: 70%;
-    padding: auto;
-    height: 1.5rem;
-    text-align: center;
-    border-radius: 0.5rem;
+.AForm #title {
+  width: 70%;
+  padding: auto;
+  height: 1.5rem;
+  text-align: center;
+  border-radius: 0.5rem;
 }
-.AForm #title:focus{
+.AForm #title:focus {
   height: 3rem;
 }
 
-.AForm input{
-  border-radius: 0.5rem;  
+.AForm input {
+  border-radius: 0.5rem;
   font-weight: 700;
   text-align: center;
   width: 70%;
@@ -273,10 +251,9 @@ background: white;
   background: #f8feff;
 }
 
-
-.AForm input:focus{
-    border: 2px solid #48B0DF;
-    height: 3rem;
+.AForm input:focus {
+  border: 2px solid #48b0df;
+  height: 3rem;
 }
 /* 
 .donate input {
@@ -303,11 +280,10 @@ background: white;
 }
 
 @media screen and (max-width: 1000px) {
-
   .announce {
     max-width: 100vw;
-    background: #48B0DF;
-}
+    background: #48b0df;
+  }
   .announce .bodyy {
     margin: auto;
     width: 100vw;
@@ -315,28 +291,25 @@ background: white;
     min-height: 100vh;
     background: #f1fffd;
     padding: 1px;
-  
   }
   .anc .ancinfo {
     height: max-content;
   }
 
   .anc .ancinfo img {
-      height: 30vw;
+    height: 30vw;
   }
 
   .anc .ancinfo p {
     font-size: 1.2rem;
-    
+
     margin-left: 2rem;
     text-align: left;
-  width: 90%;
+    width: 90%;
     font-weight: 700;
-
   }
 
   .anc {
-
     border-radius: 1px;
     margin: auto;
     width: 100%;
@@ -353,7 +326,6 @@ background: white;
     padding-right: 0px;
   }
   .anc .ancinfo {
-    
     background: white;
     width: 90vw;
     margin: auto;
@@ -365,52 +337,52 @@ background: white;
     margin-left: auto;
     margin-right: 2rem;
     height: max-content;
-}
-.anc .ancinfoback {
-  background: #48B0DF;
-  margin: 0;
-  padding: 0.1px;
-  height: max-content;
-  padding-bottom: 2rem;
-  width: 100vw;
-}
-.andlistparent {
-  width: 100vw;
-  margin-left: auto;
-  margin-right: 2vw;
-  background: rgb(241, 249, 255);
-  border-radius: 0.9rem;
-  padding-bottom: 2rem;
-  background: #48B0DF;
-  margin-top: -2rem;
-}
-.anclistss {
-  width: 90vw;
-  border-radius: 1rem;
-  background: rgb(233, 245, 255);
-  margin-left: auto;
-  margin-right: 0rem;
-  margin: auto;
-  margin-top: 1rem;
-}
-.anclistss h1 {
-  font-size: 1.7rem;
-  color: #00008B;
-  float: left;
-  margin-left: 3rem;
-}
-.anc .ancinfo h1 {
-  margin: 0;
-  float: left;
-  font-size: 1.7rem;
-  color: black;
-  margin-left: 2rem;
-  margin-top: 1rem;
-  text-align: left;
-  width: 100%;
-}
+  }
+  .anc .ancinfoback {
+    background: #48b0df;
+    margin: 0;
+    padding: 0.1px;
+    height: max-content;
+    padding-bottom: 2rem;
+    width: 100vw;
+  }
+  .andlistparent {
+    width: 100vw;
+    margin-left: auto;
+    margin-right: 2vw;
+    background: rgb(241, 249, 255);
+    border-radius: 0.9rem;
+    padding-bottom: 2rem;
+    background: #48b0df;
+    margin-top: -2rem;
+  }
+  .anclistss {
+    width: 90vw;
+    border-radius: 1rem;
+    background: rgb(233, 245, 255);
+    margin-left: auto;
+    margin-right: 0rem;
+    margin: auto;
+    margin-top: 1rem;
+  }
+  .anclistss h1 {
+    font-size: 1.7rem;
+    color: #00008b;
+    float: left;
+    margin-left: 3rem;
+  }
+  .anc .ancinfo h1 {
+    margin: 0;
+    float: left;
+    font-size: 1.7rem;
+    color: black;
+    margin-left: 2rem;
+    margin-top: 1rem;
+    text-align: left;
+    width: 100%;
+  }
 
-  .announce .anc ul{
+  .announce .anc ul {
     margin: 0;
     margin-left: 0;
     padding: 0;
@@ -420,150 +392,140 @@ background: white;
   .announce .anc li:first-child {
     color: white;
     width: 90%;
-}
-  #nonedispa{
-  display: none;
-}
+  }
+  #nonedispa {
+    display: none;
+  }
   .anc .anclistitems {
     background: none;
     width: 90%;
     border-bottom-left-radius: 0.5rem;
     border-bottom-right-radius: 0.5rem;
     margin: auto;
-}
+  }
 
-.anc .anclistitems li:first-child {
-  color: black;
-  background: white;
-  text-align: center;
-  width: 99.5%;
-}
-.anc .anclistitems li:first-child h3 {
-  font-weight: 400;
-  font-size: 3.5vw;
-}
-.anc .bord:first-child {
-  border-top-left-radius: 0.5rem;
-  border-top-right-radius: 0.5rem;
-}
+  .anc .anclistitems li:first-child {
+    color: black;
+    background: white;
+    text-align: center;
+    width: 99.5%;
+  }
+  .anc .anclistitems li:first-child h3 {
+    font-weight: 400;
+    font-size: 3.5vw;
+  }
+  .anc .bord:first-child {
+    border-top-left-radius: 0.5rem;
+    border-top-right-radius: 0.5rem;
+  }
 
   .announce .anc li {
- 
-  min-height: 2rem;
-  margin: auto;
-  list-style: none;
-  margin-top: 0rem;
-  padding-top: 15px;
-  padding-bottom: 10px;
-  display:block;
-  padding-left: 0rem;
-  border: 0px;
-  text-align: center;
-  height: min-content;
-  width: 100%;
-  align-items: center;
-  box-shadow: 2px 2px 8px #cdcdcd;
-  background: white;
-  height: max-content;
-  margin-bottom: 2rem;
-  border-radius: 1rem;
- 
+    min-height: 2rem;
+    margin: auto;
+    list-style: none;
+    margin-top: 0rem;
+    padding-top: 15px;
+    padding-bottom: 10px;
+    display: block;
+    padding-left: 0rem;
+    border: 0px;
+    text-align: center;
+    height: min-content;
+    width: 100%;
+    align-items: center;
+    box-shadow: 2px 2px 8px #cdcdcd;
+    background: white;
+    height: max-content;
+    margin-bottom: 2rem;
+    border-radius: 1rem;
+  }
 
-}
+  .anc li .p1 {
+    margin-left: 0rem;
+    width: 90%;
+    text-align: center;
+    margin: auto;
+  }
 
-.anc li .p1 {
-  margin-left: 0rem;
-  width:90%;
-  text-align: center;
-  margin: auto;
-}
+  .anc li .p2 {
+    text-align: center;
+    margin-right: 0rem;
+    width: 90%;
+    margin: auto;
+  }
 
-.anc li .p2 {
-  text-align: center;
-  margin-right: 0rem;
-  width: 90%;
-  margin: auto;
-}
+  .anc li .p3 {
+    text-align: center;
+    margin-right: 0rem;
+    width: 90%;
+    margin: auto;
+  }
 
-.anc li .p3 {
-  text-align: center;
-  margin-right: 0rem;
-  width: 90%;
-  margin: auto;
-}
+  .anc li .p6 {
+    width: 90%;
+    margin: auto;
+    font-size: 3.5vw;
+  }
 
-.anc li .p6{
-  width: 90%;
-  margin: auto;
-  font-size: 3.5vw;
-}
+  .AForm {
+    background-color: #f9f9f9;
+    padding: 30px;
+    width: 100%;
+    height: max-content;
+    box-shadow: 2px 2px 8px rgb(213, 213, 213);
+    margin-left: 0%;
+    margin: auto;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+  }
 
-
-
-.AForm {
-  
-  background-color: #f9f9f9;
-  padding: 30px;
-  width: 100%;
-  height: max-content;
-  box-shadow: 2px 2px 8px rgb(213, 213, 213);
-  margin-left: 0%;
-  margin: auto;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-}
-
-.Formcont {
-
-  display: flex;
-  justify-content:center;
-  
-}
-.AForm #title{
+  .Formcont {
+    display: flex;
+    justify-content: center;
+  }
+  .AForm #title {
     width: 90%;
     padding: auto;
     height: 2rem;
     text-align: center;
-}
+  }
 
-.AForm input{
-  font-weight: 700;
-  text-align: center;
-  width: 90%;
-  min-height: 2rem;
-  margin-top: 1rem;
-}
+  .AForm input {
+    font-weight: 700;
+    text-align: center;
+    width: 90%;
+    min-height: 2rem;
+    margin-top: 1rem;
+  }
 
-.AForm input:hover{
-  font-weight: 700;
-  text-align: center;
-  width: 95%;
-  box-shadow: 2px 2px 8px rgb(192, 255, 249);
-  min-height: 2rem;
-  margin-top: 1rem;
-}
-.AForm .button-53{
-  width: 90%;
-}
+  .AForm input:hover {
+    font-weight: 700;
+    text-align: center;
+    width: 95%;
+    box-shadow: 2px 2px 8px rgb(192, 255, 249);
+    min-height: 2rem;
+    margin-top: 1rem;
+  }
+  .AForm .button-53 {
+    width: 90%;
+  }
 
-.Formcont {
-  width: 95vw;
-  margin-left: auto;
-  margin-right: 2vw;
-}
+  .Formcont {
+    width: 95vw;
+    margin-left: auto;
+    margin-right: 2vw;
+  }
 
-#pp1{
-  display: none;
-
-}
-#pp2{
-  display: none;
-
-}
-#pp3{
-  display: none;
-}
-#pp4{
-  display: none;
-}
+  #pp1 {
+    display: none;
+  }
+  #pp2 {
+    display: none;
+  }
+  #pp3 {
+    display: none;
+  }
+  #pp4 {
+    display: none;
+  }
 }
