--- a/frontend/src/css/Dis.css
+++ b/frontend/src/css/Dis.css
@@ -1,4 +1,4 @@
-.dispredd{
+.dispredd {
   background: #48b0df;
   height: max-content;
   width: 100vw;
@@ -8,48 +8,42 @@
   padding-bottom: 2rem;
 }
 
-.dispredd .chatfunc{
+.dispredd .chatfunc {
   width: 81vw;
   margin-right: 2vw;
   margin-left: auto;
   height: 10rem;
-
 }
 
-
 .dis {
-
   width: 82.6vw;
   margin-right: 2vw;
   margin-left: auto;
   height: max-content;
-  
+
   border-radius: 1rem;
   background: rgb(237, 249, 255);
   margin-top: 2rem;
   padding: 0.1px;
   padding-bottom: 2rem;
-
-
 }
-.dis h2{
+.dis h2 {
   margin-top: 1rem;
-  color: #00008B;
+  color: #00008b;
   text-align: left;
   margin-left: 2rem;
-  font-size: 1.7rem
+  font-size: 1.7rem;
 }
 
 .dise {
   display: flex;
- 
+
   flex-wrap: wrap;
   width: 90%;
   margin: auto;
   justify-content: space-evenly;
- 
 }
-.diseaa{
+.diseaa {
   width: 20vw;
   background: #ffffff;
   box-shadow: 2px 2px 8px rgb(236, 236, 236);
@@ -59,30 +53,25 @@
   padding-bottom: 2rem;
   border-radius: 0.9rem;
 }
-.dise img{
-  margin-top:3rem;
+.dise img {
+  margin-top: 3rem;
   width: 8vw;
 }
 
 .dise a {
-
   box-shadow: none;
   text-align: center;
   font-style: none;
   text-decoration: none;
- 
-
- 
 }
 
-.dise li{
- 
+.dise li {
   background: none;
   box-shadow: none;
 }
 
 .diseaa:hover {
-  width: 20vw;  
+  width: 20vw;
   background: #f8f8f8;
   margin-top: 2rem;
   text-align: center;
@@ -92,12 +81,10 @@
   height: max-content;
   min-height: 18rem;
   box-shadow: 2px 2px 8px rgb(218, 218, 218);
-  margin-top:1.5rem;
+  margin-top: 1.5rem;
 }
 
-
 .dise .Cnavli {
-
   font-style: none;
   text-decoration: none;
   color: black;
@@ -105,7 +92,7 @@
   text-align: center;
   width: 15vw;
   margin-top: 2rem;
-  
+
   font-weight: 700;
   height: max-content;
 
@@ -115,7 +102,6 @@
 }
 
 .Cnavli h2 {
-
   margin: 0;
   font-style: none;
   text-decoration: none;
@@ -123,13 +109,12 @@
   margin-bottom: 2rem;
 }
 
-.heartdis{
+.heartdis {
   width: 90vw;
   margin: auto;
-
 }
 
-.heartdis .flexxx{
+.heartdis .flexxx {
   margin: auto;
   width: 90%;
   padding: 2rem;
@@ -137,11 +122,11 @@
   box-shadow: 2px 2px 9px rgb(236, 236, 236);
 }
 
-.heartdis .flexxx input{
-    width: 70%;
+.heartdis .flexxx input {
+  width: 70%;
 }
 
-.heartdis .button-53{
+.heartdis .button-53 {
   margin-bottom: 2rem;
 }
 
@@ -153,35 +138,32 @@
     margin: auto;
     height: max-content;
     margin-top: 2rem;
-}
-.dispredd .chatfunc img{
-  height: 30vw;
-}
-.dispredd .chatfunc p{
-  width: 90%;
-}
-.dis {
-  width: 95vw;
-  margin-right: 0vw;
-  margin-left: auto;
-  margin: auto;
-  height: max-content;
-  border-radius: 1rem;
-  background: rgb(237, 249, 255);
-  margin-top: 2rem;
-  padding: 0.1px;
-  padding-bottom: 2rem;
-}
-  .dispredd{
+  }
+  .dispredd .chatfunc img {
+    height: 30vw;
+  }
+  .dispredd .chatfunc p {
+    width: 90%;
+  }
+  .dis {
+    width: 95vw;
+    margin-right: 0vw;
+    margin-left: auto;
+    margin: auto;
+    height: max-content;
+    border-radius: 1rem;
+    background: rgb(237, 249, 255);
+    margin-top: 2rem;
+    padding: 0.1px;
+    padding-bottom: 2rem;
+  }
+  .dispredd {
     position: relative;
-  
   }
   .dise {
     display: block;
     width: 90%;
     margin: auto;
-
-  
   }
   .diseaa {
     width: 80%;
@@ -195,12 +177,12 @@
     margin: auto;
     margin-bottom: 2rem;
     padding-top: 2rem;
-}
-  .dise img{
+  }
+  .dise img {
     width: 10rem;
   }
-  
-  .dise .Cnavli{
+
+  .dise .Cnavli {
     margin: auto;
     font-style: none;
     text-decoration: none;
@@ -210,20 +192,18 @@
     width: 90%;
     background: white;
     height: max-content;
-    
+
     padding: 0;
-
-}
-.dise .Cnavli h2{
-
+  }
+  .dise .Cnavli h2 {
     margin: 0;
     font-style: none;
     text-decoration: none;
     margin-top: 1rem;
     margin-bottom: 2rem;
-}
+  }
 
-.Cnavli .button-53{
-  width: 80%;
+  .Cnavli .button-53 {
+    width: 80%;
+  }
 }
-} 
