--- a/frontend/src/css/Request.css
+++ b/frontend/src/css/Request.css
@@ -9,9 +9,9 @@
   margin: auto;
   display: block;
   justify-content: center;
-  background: #C6E6FB;
+  background: #c6e6fb;
   padding: 0.1px;
-  border-radius: 0.9rem; 
+  border-radius: 0.9rem;
   margin-bottom: 1rem;
 }
 
@@ -98,7 +98,7 @@ input:focus {
     background: #48b0df;
     padding: 0.1px;
     width: 100vw;
-}
+  }
   #reqim {
     height: 50vw;
     float: none;
@@ -133,5 +133,5 @@ input:focus {
     outline: none;
     background: rgb(255, 255, 255);
     background-color: #eaf4fc;
-}
+  }
 }
