--- a/frontend/src/css/PersonalChat.css
+++ b/frontend/src/css/PersonalChat.css
@@ -140,7 +140,7 @@
   border: none;
 }
 .received-msg {
-  background: #202c33;
+  background: rgba(32, 44, 51, 0.95);
 
   width: max-content;
   max-width: 70%;
@@ -167,7 +167,7 @@
   border-radius: 0.9rem;
   padding: 0.5rem;
   margin-top: 1rem;
-  background: rgb(108, 150, 187);
+  background: rgb(108, 150, 187 , 0.9);
   overflow-wrap: break-word;
   max-width: 60%;
   width: max-content;
@@ -178,7 +178,7 @@
 }
 
 .datemess {
-  font-size: 0.7rem;
+  font-size: 0.6rem;
   color: rgb(216, 216, 216);
   margin-bottom: 0;
   margin-top: auto;
@@ -186,7 +186,7 @@
   margin-left: 0.5rem;
 }
 .datemesss {
-  font-size: 0.7rem;
+  font-size: 0.6rem;
   color: rgb(216, 216, 216);
   margin-bottom: 0;
   margin-top: auto;
@@ -204,6 +204,7 @@
   margin-left: 1rem;
   cursor: pointer;
   float: right;
+  filter: invert(55%) sepia(49%) saturate(574%) hue-rotate(49deg) brightness(92%) contrast(78%);
 }
 #sendbutton img:hover {
   transform: translateX(1px);
