--- a/frontend/src/css/SignIn.css
+++ b/frontend/src/css/SignIn.css
@@ -70,6 +70,9 @@
   border-radius: 2rem;
 }
 
+.bkimg{
+  height: 100%;
+}
 .left img {
   max-width: 37rem;
   margin-left: 0;
@@ -82,6 +85,7 @@
   position: relative;
   z-index: 2;
   width: 100%;
+
 }
 .left h1 {
   text-align: center;
@@ -109,6 +113,7 @@
   animation-fill-mode: forwards;
   visibility: hidden;
   opacity: 0;
+  padding-left: 0%;
 }
 
 @keyframes pAnimation {
@@ -144,6 +149,7 @@
 .loginForm .form2 {
   text-align: center;
   padding-right: 0;
+  padding-left: 0;
 }
 .mainsignin .form2 {
   margin-top: 4rem;
